LISP_Parser/myLispGrammarParser.py
# Generated from myLispGrammar.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class myLispGrammarParser ( Parser ):

    grammarFileName = "myLispGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "':'", "'-'", "'DEF-INSTANCE'", 
                     "'def-instance'", "'RATIO:'", "'ratio:'", "'THOUS:'", 
                     "'thous:'", "'THOUS$:'", "'thous$:'", "'SCALE:'", "'scale:'", 
                     "'STATE'", "'state'", "'LOCATION'", "'location'", "'CONTROL'", 
                     "'control'", "'NO-OF-STUDENTS'", "'no-of-students'", 
                     "'MALE:FEMALE'", "'male:female'", "'STUDENT:FACULTY'", 
                     "'student:faculty'", "'SAT VERBAL'", "'sat verbal'", 
                     "'SAT MATH'", "'sat math'", "'EXPENSES'", "'expenses'", 
                     "'PERCENT-FINANCIAL-AID'", "'percent-financial-aid'", 
                     "'NO-APPLICANTS'", "'no-applicants'", "'PERCENT-ADMITTANCE'", 
                     "'percent-admittance'", "'PERCENT-ENROLLED'", "'percent-enrolled'", 
                     "'ACADEMICS'", "'academics'", "'SOCIAL'", "'social'", 
                     "'QUALITY-OF-LIFE'", "'quality-of-life'", "'ACADEMIC-EMPHASIS'", 
                     "'academic-emphasis'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WORD", "NUMBER", "WS" ]

    RULE_root = 0
    RULE_instance = 1
    RULE_items_list = 2
    RULE_value_type = 3
    RULE_value = 4
    RULE_typed_value = 5
    RULE_ratio = 6
    RULE_interval = 7
    RULE_single = 8
    RULE_dual = 9
    RULE_column_name = 10
    RULE_def_instance = 11
    RULE_uni_name = 12
    RULE_ratio_ = 13
    RULE_thous = 14
    RULE_money = 15
    RULE_scale = 16
    RULE_this_state = 17
    RULE_location = 18
    RULE_control = 19
    RULE_num_students = 20
    RULE_gender = 21
    RULE_student_faculty = 22
    RULE_sat_verbal = 23
    RULE_sat_maths = 24
    RULE_expenses = 25
    RULE_finantial_aid = 26
    RULE_number_appli = 27
    RULE_perc_admitance = 28
    RULE_perc_enrolled = 29
    RULE_academics = 30
    RULE_social_scale = 31
    RULE_quality_of_life = 32
    RULE_academic_emphasis = 33

    ruleNames =  [ "root", "instance", "items_list", "value_type", "value", 
                   "typed_value", "ratio", "interval", "single", "dual", 
                   "column_name", "def_instance", "uni_name", "ratio_", 
                   "thous", "money", "scale", "this_state", "location", 
                   "control", "num_students", "gender", "student_faculty", 
                   "sat_verbal", "sat_maths", "expenses", "finantial_aid", 
                   "number_appli", "perc_admitance", "perc_enrolled", "academics", 
                   "social_scale", "quality_of_life", "academic_emphasis" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    WORD=49
    NUMBER=50
    WS=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(myLispGrammarParser.EOF, 0)

        def instance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myLispGrammarParser.InstanceContext)
            else:
                return self.getTypedRuleContext(myLispGrammarParser.InstanceContext,i)


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = myLispGrammarParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==myLispGrammarParser.T__0:
                self.state = 68
                self.instance()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(myLispGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstanceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def def_instance(self):
            return self.getTypedRuleContext(myLispGrammarParser.Def_instanceContext,0)


        def uni_name(self):
            return self.getTypedRuleContext(myLispGrammarParser.Uni_nameContext,0)


        def items_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(myLispGrammarParser.Items_listContext)
            else:
                return self.getTypedRuleContext(myLispGrammarParser.Items_listContext,i)


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_instance

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstance" ):
                return visitor.visitInstance(self)
            else:
                return visitor.visitChildren(self)




    def instance(self):

        localctx = myLispGrammarParser.InstanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(myLispGrammarParser.T__0)
            self.state = 77
            self.def_instance()
            self.state = 78
            self.uni_name()
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.items_list()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==myLispGrammarParser.T__0):
                    break

            self.state = 84
            self.match(myLispGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Items_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column_name(self):
            return self.getTypedRuleContext(myLispGrammarParser.Column_nameContext,0)


        def value(self):
            return self.getTypedRuleContext(myLispGrammarParser.ValueContext,0)


        def typed_value(self):
            return self.getTypedRuleContext(myLispGrammarParser.Typed_valueContext,0)


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_items_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItems_list" ):
                return visitor.visitItems_list(self)
            else:
                return visitor.visitChildren(self)




    def items_list(self):

        localctx = myLispGrammarParser.Items_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_items_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(myLispGrammarParser.T__0)
            self.state = 87
            self.column_name()
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [myLispGrammarParser.WORD, myLispGrammarParser.NUMBER]:
                self.state = 88
                self.value()
                pass
            elif token in [myLispGrammarParser.T__6, myLispGrammarParser.T__7, myLispGrammarParser.T__8, myLispGrammarParser.T__9, myLispGrammarParser.T__10, myLispGrammarParser.T__11, myLispGrammarParser.T__12, myLispGrammarParser.T__13]:
                self.state = 89
                self.typed_value()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 92
            self.match(myLispGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Value_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ratio_(self):
            return self.getTypedRuleContext(myLispGrammarParser.Ratio_Context,0)


        def thous(self):
            return self.getTypedRuleContext(myLispGrammarParser.ThousContext,0)


        def money(self):
            return self.getTypedRuleContext(myLispGrammarParser.MoneyContext,0)


        def scale(self):
            return self.getTypedRuleContext(myLispGrammarParser.ScaleContext,0)


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_value_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue_type" ):
                return visitor.visitValue_type(self)
            else:
                return visitor.visitChildren(self)




    def value_type(self):

        localctx = myLispGrammarParser.Value_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value_type)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [myLispGrammarParser.T__6, myLispGrammarParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.ratio_()
                pass
            elif token in [myLispGrammarParser.T__8, myLispGrammarParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.thous()
                pass
            elif token in [myLispGrammarParser.T__10, myLispGrammarParser.T__11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.money()
                pass
            elif token in [myLispGrammarParser.T__12, myLispGrammarParser.T__13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.scale()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ratio(self):
            return self.getTypedRuleContext(myLispGrammarParser.RatioContext,0)


        def interval(self):
            return self.getTypedRuleContext(myLispGrammarParser.IntervalContext,0)


        def WORD(self):
            return self.getToken(myLispGrammarParser.WORD, 0)

        def NUMBER(self):
            return self.getToken(myLispGrammarParser.NUMBER, 0)

        def getRuleIndex(self):
            return myLispGrammarParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = myLispGrammarParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.ratio()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.interval()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.match(myLispGrammarParser.WORD)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.match(myLispGrammarParser.NUMBER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typed_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value_type(self):
            return self.getTypedRuleContext(myLispGrammarParser.Value_typeContext,0)


        def value(self):
            return self.getTypedRuleContext(myLispGrammarParser.ValueContext,0)


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_typed_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyped_value" ):
                return visitor.visitTyped_value(self)
            else:
                return visitor.visitChildren(self)




    def typed_value(self):

        localctx = myLispGrammarParser.Typed_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typed_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.value_type()
            self.state = 107
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RatioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(myLispGrammarParser.NUMBER)
            else:
                return self.getToken(myLispGrammarParser.NUMBER, i)

        def getRuleIndex(self):
            return myLispGrammarParser.RULE_ratio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRatio" ):
                return visitor.visitRatio(self)
            else:
                return visitor.visitChildren(self)




    def ratio(self):

        localctx = myLispGrammarParser.RatioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ratio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(myLispGrammarParser.NUMBER)
            self.state = 110
            self.match(myLispGrammarParser.T__2)
            self.state = 111
            self.match(myLispGrammarParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntervalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dual(self):
            return self.getTypedRuleContext(myLispGrammarParser.DualContext,0)


        def single(self):
            return self.getTypedRuleContext(myLispGrammarParser.SingleContext,0)


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_interval

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterval" ):
                return visitor.visitInterval(self)
            else:
                return visitor.visitChildren(self)




    def interval(self):

        localctx = myLispGrammarParser.IntervalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_interval)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.dual()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.single()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(myLispGrammarParser.NUMBER, 0)

        def getRuleIndex(self):
            return myLispGrammarParser.RULE_single

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle" ):
                return visitor.visitSingle(self)
            else:
                return visitor.visitChildren(self)




    def single(self):

        localctx = myLispGrammarParser.SingleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_single)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(myLispGrammarParser.NUMBER)
            self.state = 118
            self.match(myLispGrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DualContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(myLispGrammarParser.NUMBER)
            else:
                return self.getToken(myLispGrammarParser.NUMBER, i)

        def getRuleIndex(self):
            return myLispGrammarParser.RULE_dual

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDual" ):
                return visitor.visitDual(self)
            else:
                return visitor.visitChildren(self)




    def dual(self):

        localctx = myLispGrammarParser.DualContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dual)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(myLispGrammarParser.NUMBER)
            self.state = 121
            self.match(myLispGrammarParser.T__3)
            self.state = 122
            self.match(myLispGrammarParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def this_state(self):
            return self.getTypedRuleContext(myLispGrammarParser.This_stateContext,0)


        def location(self):
            return self.getTypedRuleContext(myLispGrammarParser.LocationContext,0)


        def control(self):
            return self.getTypedRuleContext(myLispGrammarParser.ControlContext,0)


        def num_students(self):
            return self.getTypedRuleContext(myLispGrammarParser.Num_studentsContext,0)


        def gender(self):
            return self.getTypedRuleContext(myLispGrammarParser.GenderContext,0)


        def student_faculty(self):
            return self.getTypedRuleContext(myLispGrammarParser.Student_facultyContext,0)


        def sat_verbal(self):
            return self.getTypedRuleContext(myLispGrammarParser.Sat_verbalContext,0)


        def sat_maths(self):
            return self.getTypedRuleContext(myLispGrammarParser.Sat_mathsContext,0)


        def expenses(self):
            return self.getTypedRuleContext(myLispGrammarParser.ExpensesContext,0)


        def finantial_aid(self):
            return self.getTypedRuleContext(myLispGrammarParser.Finantial_aidContext,0)


        def number_appli(self):
            return self.getTypedRuleContext(myLispGrammarParser.Number_appliContext,0)


        def perc_admitance(self):
            return self.getTypedRuleContext(myLispGrammarParser.Perc_admitanceContext,0)


        def perc_enrolled(self):
            return self.getTypedRuleContext(myLispGrammarParser.Perc_enrolledContext,0)


        def academics(self):
            return self.getTypedRuleContext(myLispGrammarParser.AcademicsContext,0)


        def social_scale(self):
            return self.getTypedRuleContext(myLispGrammarParser.Social_scaleContext,0)


        def quality_of_life(self):
            return self.getTypedRuleContext(myLispGrammarParser.Quality_of_lifeContext,0)


        def academic_emphasis(self):
            return self.getTypedRuleContext(myLispGrammarParser.Academic_emphasisContext,0)


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_column_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumn_name" ):
                return visitor.visitColumn_name(self)
            else:
                return visitor.visitChildren(self)




    def column_name(self):

        localctx = myLispGrammarParser.Column_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_column_name)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.this_state()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.location()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.control()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.num_students()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.gender()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.num_students()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 130
                self.student_faculty()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 131
                self.sat_verbal()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 132
                self.sat_maths()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 133
                self.expenses()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 134
                self.finantial_aid()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 135
                self.number_appli()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 136
                self.perc_admitance()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 137
                self.perc_enrolled()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 138
                self.academics()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 139
                self.social_scale()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 140
                self.quality_of_life()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 141
                self.academic_emphasis()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Def_instanceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_def_instance

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef_instance" ):
                return visitor.visitDef_instance(self)
            else:
                return visitor.visitChildren(self)




    def def_instance(self):

        localctx = myLispGrammarParser.Def_instanceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_def_instance)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not(_la==myLispGrammarParser.T__4 or _la==myLispGrammarParser.T__5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Uni_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(myLispGrammarParser.WORD, 0)

        def getRuleIndex(self):
            return myLispGrammarParser.RULE_uni_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUni_name" ):
                return visitor.visitUni_name(self)
            else:
                return visitor.visitChildren(self)




    def uni_name(self):

        localctx = myLispGrammarParser.Uni_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_uni_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(myLispGrammarParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ratio_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_ratio_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRatio_" ):
                return visitor.visitRatio_(self)
            else:
                return visitor.visitChildren(self)




    def ratio_(self):

        localctx = myLispGrammarParser.Ratio_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ratio_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==myLispGrammarParser.T__6 or _la==myLispGrammarParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThousContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_thous

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThous" ):
                return visitor.visitThous(self)
            else:
                return visitor.visitChildren(self)




    def thous(self):

        localctx = myLispGrammarParser.ThousContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_thous)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            _la = self._input.LA(1)
            if not(_la==myLispGrammarParser.T__8 or _la==myLispGrammarParser.T__9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoneyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_money

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoney" ):
                return visitor.visitMoney(self)
            else:
                return visitor.visitChildren(self)




    def money(self):

        localctx = myLispGrammarParser.MoneyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_money)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            _la = self._input.LA(1)
            if not(_la==myLispGrammarParser.T__10 or _la==myLispGrammarParser.T__11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScaleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_scale

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScale" ):
                return visitor.visitScale(self)
            else:
                return visitor.visitChildren(self)




    def scale(self):

        localctx = myLispGrammarParser.ScaleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_scale)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            _la = self._input.LA(1)
            if not(_la==myLispGrammarParser.T__12 or _la==myLispGrammarParser.T__13):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class This_stateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return myLispGrammarParser.RULE_this_state
